testing git configuration

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</div>
 </div>
 <div id="subsequentbox">
+	<p>This is where I will put my short bio</p>
 	<div id="leftside">
 		<h2>Things I've written</h2>
 		<ul>
