bit of a homepage redesign

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 		<p><i>You are not seeing my website because either I broke it, or you don't have javascript enabled.<br>Either way, feel free to <a href="mailto:totallyuneekemail@gmail.com">contact me</a>.</i></p>
 	</div>
 </div>
+<p>
+<div id="contentbox">
 <div id="subsequentbox">
-	<div id="leftside">
+	<div class="list">
 		<h2>Things I've written</h2>
 		<ul>
 			<li>
-				<a href="notebook.nb.html">experimental R notebook</a>
+				<a href="/essay2017.pdf">An essay I wrote mostly in 2017</a>
+			</li>
+			<li>
+				<a href="notebook.nb.html">learning to write an R notebook</a>
 			</li>
 			<li>
 				<a href="named-houses-harrisonburg.html">Named Houses of Harrisonburg</a>
@@ -46,8 +51,8 @@
 			</li>
 		</ul>
 	</div>
-	<div id="rightside">
-		<h2>Thing's I've made</h2>
+	<div class="list">
+		<h2>Things I've made</h2>
 		<ul>
 			<li>
 				<a href="printkey">3D Print KW1, SC1, SC4 Keys</a>
@@ -64,6 +69,13 @@
 		</ul>
 	</div>
 </div>
+	<div id="blog">
+		<h2>Some thoughts so far</h2>
+		<p>Thinking about using this as a place to write short blog posts.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+</div>
+</p>
 <script src="homepagescript.js"></script>
 </body>
 </html>
