making this site a git repo again, June 2 2020.

--- a/mvtv.html
+++ b/mvtv.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>The H-B Archive</title>
+		<title>MV TV - jacobhall.net</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500%7CWork+Sans:400" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="articlestyle.css">
+		<style>
+			iframe { width: 50em; }
+		</style>
 </head>
 <body>
         <div id="sidebar">
@@ -24,10 +26,12 @@
                         <h5>⬅️ Jacob Hall's weblog</h5>
                 </a>
         </div>
+
   <article>
-    <h1>The H-B Archive</h1>
-<p>A project I started in June 2017, The H-B Archive is my attempt to create an online home for the alumni, news, and historical documents of H-B Woodlawn, the secondary school I attended.</p>
-<p>It's a beast, and I have huge dreams to carefully design every page with a different stylesheet to make the UX truly thought-out and unique. The website includes multiple SQL databases, to store alumni/staff contact information, as well as documents from our governing body, Town Meeting.</p>
-<p>I'd love to hear what you think, and how I might be able to refine it for the future. <a href="https://thehbarchive.org">Visit The H-B Archive</a></p>
+    <h1>MV TV</h1>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLwvXWNeMmPrTlbMNWrxWIwJfPikpg3-z8&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<p>
+reference for making the iframe player do shit automatically <a href="https://developers.google.com/youtube/iframe_api_reference">at developers.google.com</a>
+</p>
 </article>
 </html>
