--- a/printkey/index.html
+++ b/printkey/index.html
@@ -22,6 +22,7 @@
 		</div>
 	</a>
   <article>
+    <p class="warning">ATTN: This page currently doesn't work, and it might be a while until I fix it. If you'd like the code, get in touch and I'd be happy to send it to you or create a public repository.</p>
     <h1>print a key</h1>
     <h2>1.</h2>
     <p>go <a href="https://cq.cx/key.html">here</a> and follow the instructions</p>
