--- a/tech-theatre-work.html
+++ b/tech-theatre-work.html
@@ -9,19 +9,23 @@
 		<link rel="stylesheet" type="text/css" href="articlestyle.css">
 </head>
 <body>
-	<a href="/">
-		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-			<div class="flipper">
-				<div class="front">
-					<img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" />
-				</div>
-				<div class="back">
-					<svg id="backarrow" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M2.117 12l7.527 6.235-.644.765-9-7.521 9-7.479.645.764-7.529 6.236h21.884v1h-21.883z"/></svg>
-				</div>
-			</div>
-		</div>
-	</a>
-  <article>
+        <div id="sidebar">
+                <a class="nostyle" href="/">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                                <div class="front">
+                                        <img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" alt="sexy mirror selfie"/>
+                                </div>
+                                <div class="back">
+                                        <span>🏠</span>
+                                </div>
+                        </div>
+                </div>
+                        <h5>⬅️ Jacob Hall's weblog</h5>
+                </a>
+        </div>
+  
+<article>
   <h1>Technical Theatre Work</h1>
 <p>I created this website when I applied to colleges as an online portfolio of my high school achievements. As a part of that, I created <a href="/techtheatre">this page</a>, an outline of my work in the theatre program. I might expand on it later, but for now it is as I sent it to schools.</p>
 </article>
