--- a/ceilings-instead-of-skies.html
+++ b/ceilings-instead-of-skies.html
@@ -9,19 +9,22 @@
 		<link rel="stylesheet" type="text/css" href="articlestyle.css">
 </head>
 <body>
-	<a href="/">
-		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-			<div class="flipper">
-				<div class="front">
-					<img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" />
-				</div>
-				<div class="back">
-					<svg id="backarrow" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M2.117 12l7.527 6.235-.644.765-9-7.521 9-7.479.645.764-7.529 6.236h21.884v1h-21.883z"/></svg>
-				</div>
-			</div>
-		</div>
-	</a>
-  <article>
+        <div id="sidebar">
+                <a class="nostyle" href="/">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                                <div class="front">
+                                        <img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" alt="sexy mirror selfie"/>
+                                </div>
+                                <div class="back">
+                                        <span>🏠</span>
+                                </div>
+                        </div>
+                </div>
+                        <h5>⬅️ Jacob Hall's weblog</h5>
+                </a>
+        </div>  
+<article>
   <h1>Ceilings Instead of Skies</h1>
 <p>My brilliant friend Aidan Walker wrote a collection of poems entitled <i>Ceilings Instead of Skies</i>. He proposed to me a concept for a website on which readers could explore the collection, by clicking on key words in each poem that would lead to a random poem that shared that theme.</p>
 <p>I don't want to take much credit for this project: Aidan was very specific about how he'd like the poems to link together. The site is still a work in progress, but you can check it out <a href="https://wordways.us">here</a>.</p>
