--- a/discrete-rv-distributions.html
+++ b/discrete-rv-distributions.html
@@ -19,18 +19,22 @@
 		</script>
 </head>
 <body>
-	<a href="/">
-		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-			<div class="flipper">
-				<div class="front">
-					<img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" />
-				</div>
-				<div class="back">
-					<svg id="backarrow" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M2.117 12l7.527 6.235-.644.765-9-7.521 9-7.479.645.764-7.529 6.236h21.884v1h-21.883z"/></svg>
-				</div>
-			</div>
-		</div>
-	</a>
+        <div id="sidebar">
+                <a class="nostyle" href="/">
+                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                                <div class="front">
+                                        <img class="profilepic" id="backprofilepic" src="images/toothbrush_profile_small.jpg" alt="sexy mirror selfie"/>
+                                </div>
+                                <div class="back">
+                                        <span>🏠</span>
+                                </div>
+                        </div>
+                </div>
+                        <h5>⬅️ Jacob Hall's weblog</h5>
+                </a>
+        </div>
+
 	<article>
 <h1>Discrete RV Distribution Functions</h1>
 September 19-21, 2018
