--- a/recipes.html
+++ b/recipes.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>The H-B Archive</title>
+		<title>recipes</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500%7CWork+Sans:400" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="articlestyle.css">
 </head>
 <body>
@@ -24,10 +23,31 @@
                         <h5>⬅️ Jacob Hall's weblog</h5>
                 </a>
         </div>
+
   <article>
-    <h1>The H-B Archive</h1>
-<p>A project I started in June 2017, The H-B Archive is my attempt to create an online home for the alumni, news, and historical documents of H-B Woodlawn, the secondary school I attended.</p>
-<p>It's a beast, and I have huge dreams to carefully design every page with a different stylesheet to make the UX truly thought-out and unique. The website includes multiple SQL databases, to store alumni/staff contact information, as well as documents from our governing body, Town Meeting.</p>
-<p>I'd love to hear what you think, and how I might be able to refine it for the future. <a href="https://thehbarchive.org">Visit The H-B Archive</a></p>
+    <h1>recipes</h1>
+<p>
+	this might turn into a longer list of recipes, if i'm ever feeling inspired
+</p>
+<h2>pancakes</h2>
+<p>
+dirt-simple pancakes, one batch fills me up.
+</p>
+<h3>ingredients</h3>
+<ul>
+	<li>1 cup flour</li>
+	<li>1 egg</li>
+	<li>almost 1 cup milk</li>
+	<li>1 tsp baking powder</li>
+	<li>tiny lil splash of vanilla extract (optional)</li>
+	<li>lil bit of honey</li>
+</ul>
+<h3>steps</h3>
+<ol>
+	<li>mix all the ingredients in a mixing bowl,<br>
+		adding milk if its a little too thick</li>
+	<li>put oil in pan and let it heat up a bit on medium-low</li>
+	<li>cook pancakes</li>
+</ol>
 </article>
 </html>
