moved /printkey to 2019 folder. still testing git configuration

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ Happy reading!</p>
 		<h2>Things I've made</h2>
 		<ul>
 			<li>
-				<a href="printkey">3D Print KW1, SC1, SC4 Keys</a>
+				<a href="2019/printkey">3D Print KW1, SC1, SC4 Keys</a>
 			</li>
 			<li>
 				<a href="https://wordways.us">wordways.us</a>
