Spelling fix and removal of Google Font in Named Houses of Harrisonburg article

--- a/named-houses-harrisonburg.html
+++ b/named-houses-harrisonburg.html
@@ -5,7 +5,6 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500%7CWork+Sans:400" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="articlestyle.css">
 </head>
 <body>
@@ -31,7 +30,7 @@
  		 One of the things that has stuck out to me is that groups of college students that live together will often give their
  		 house a name, sometimes even making a sign that hangs prominently above the door. Student groups will often pass down
  		 their house's legacy to future members, allowing for houses to acquire nuanced personalities with time. No doubt this
- 		 is a common phenmomenon in college towns, but I think it's really cool.</p>
+ 		 is a common phenomenon in college towns, but I think it's really cool.</p>
  	<p>I got the idea the other day to make a map of the named houses surrounding JMU, which would give me an excuse to try
  		out <a href="https://leafletjs.com/">Leaflet</a>. I spent a Sunday afternoon walking around the neighborhoods that
  	surround main campus, writing down the name and address of every named house I came across. When I got home I used Google
