file organization, mostly

--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@ Happy reading!</p>
 		<h2>Things I've written</h2>
 		<ul>
 			<li>
-				<a href="/what-to-pack.html">What to Pack?</a>
+				<a href="/2020/what-to-pack.html">What to Pack?</a>
 			</li>
 			<li>
-				<a href="/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
+				<a href="/2019/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
 			</li>
 			<li>
 				<a href="/essay2017.pdf">An essay I wrote mostly in 2017</a>
@@ -475,7 +475,7 @@ Happy reading!</p>
 				<a href="named-houses-harrisonburg.html">Named Houses of Harrisonburg</a>
 			</li>
 			<li>
-				<a href="discrete-rv-distributions.html">Discrete RV Distributions</a>
+				<a href="/2018/discrete-rv-distributions.html">Discrete RV Distributions</a>
 			</li>
 			<li>
 				<a href="ceilings-instead-of-skies.html">Ceilings Instead of Skies</a>
