organized discrete rv distributions article content into one folder

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ Happy reading!</p>
 				<a href="named-houses-harrisonburg.html">Named Houses of Harrisonburg</a>
 			</li>
 			<li>
-				<a href="/2018/discrete-rv-distributions.html">Discrete RV Distributions</a>
+				<a href="/2018/discrete-rv-distributions">Discrete RV Distributions</a>
 			</li>
 			<li>
 				<a href="ceilings-instead-of-skies.html">Ceilings Instead of Skies</a>
