--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ Happy reading!</p>
 				<a href="/2019/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
 			</li>
 			<li>
-				<a href="/essay2017.pdf">An essay I wrote mostly in 2017</a>
+				<a href="/2017/essay2017.pdf">An essay I wrote mostly in 2017</a>
 			</li>
 			<li>
 				<a href="notebook.nb.html">learning to write an R notebook</a>
