creating list of articles

--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@ Happy reading!</p>
 				<a href="blurred-fonts-project.html">Blurred Fonts Project</a>
 			</li>
 		</ul>
+		<a href="articles.html">view all posts ➡️</a>
 	</div>
 	<div class="list">
 		<h2>Things I've made</h2>
