--- a/articles.html
+++ b/articles.html
@@ -40,17 +40,33 @@
 		<li>
 			<a href="/2019/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
 		</li>
+		<li>
+			<a href="/2019/named-houses-harrisonburg.html">Named Houses of Harrisonburg</a>
+		</li>
 	</ul>
 	<h2>2018</h2>
 	<ul>
 		<li>
+			<a href="/2018/ceilings-instead-of-skies.html">Ceilings Instead of Skies</a>
+		</li>
+		<li>
+			<a href="/2018/notebook.nb.html">learning to write an R notebook</a>
+		</li>
+
+		<li>
 			<a href="/2018/discrete-rv-distributions">Discrete RV Distributions</a>
+		</li>
+		<li>
+			<a href="/2018/hb-archive.html">The H-B Archive</a>
 		</li>
 	</ul>
 	<h2>2017</h2>
 	<ul>
 		<li>
 			<a href="/2017/essay2017.pdf">An essay I wrote mostly in 2017</a>
+		</li>
+		<li>
+			<a href="/2017/tech-theatre-work.html">Technical Theatre Work</a>
 		</li>
 	</ul>
 </article>
