--- a/articles.html
+++ b/articles.html
@@ -35,8 +35,13 @@
 	<h2>2019</h2>
 	<ul>
 		<li>
+			<a href="/2019/social-media-online-art.html">Some thoughts on social media and online art</a>
+		</li>
+		<li>
 			<a href="/2019/what-to-pack.html">What to Pack?</a>
 		</li>
+		<li>
+			<a href="/2019/read-everything-free.html">How to Read Everything for Free</a>
 		<li>
 			<a href="/2019/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
 		</li>
