Revert "Not going to lie, I'm unsure if I'll keep these changes."
This reverts commit ff0b449d1f9c69f3f84574269799781f407ab7c5.

--- a/articles.html
+++ b/articles.html
@@ -35,24 +35,24 @@
 	<h2>2019</h2>
 	<ul>
 		<li>
-			<a href="/2019/social-media-online-art">Some thoughts on social media and online art</a>
+			<a href="/2019/social-media-online-art.html">Some thoughts on social media and online art</a>
 		</li>
 		<li>
-			<a href="/2019/what-to-pack">What to Pack?</a>
+			<a href="/2019/what-to-pack.html">What to Pack?</a>
 		</li>
 		<li>
-			<a href="/2019/read-everything-free">How to Read Everything for Free</a>
+			<a href="/2019/read-everything-free.html">How to Read Everything for Free</a>
 		<li>
-			<a href="/2019/american-city-dialects-qgis">Mapping dialect variation among US cities in QGIS</a>
+			<a href="/2019/american-city-dialects-qgis.html">Mapping dialect variation among US cities in QGIS</a>
 		</li>
 		<li>
-			<a href="/2019/named-houses-harrisonburg">Named Houses of Harrisonburg</a>
+			<a href="/2019/named-houses-harrisonburg.html">Named Houses of Harrisonburg</a>
 		</li>
 	</ul>
 	<h2>2018</h2>
 	<ul>
 		<li>
-			<a href="/2018/ceilings-instead-of-skies">Ceilings Instead of Skies</a>
+			<a href="/2018/ceilings-instead-of-skies.html">Ceilings Instead of Skies</a>
 		</li>
 		<li>
 			<a href="/2018/notebook.nb.html">learning to write an R notebook</a>
@@ -62,7 +62,7 @@
 			<a href="/2018/discrete-rv-distributions">Discrete RV Distributions</a>
 		</li>
 		<li>
-			<a href="/2018/hb-archive">The H-B Archive</a>
+			<a href="/2018/hb-archive.html">The H-B Archive</a>
 		</li>
 	</ul>
 	<h2>2017</h2>
@@ -71,7 +71,7 @@
 			<a href="/2017/essay2017.pdf">An essay I wrote mostly in 2017</a>
 		</li>
 		<li>
-			<a href="/2017/tech-theatre-work">Technical Theatre Work</a>
+			<a href="/2017/tech-theatre-work.html">Technical Theatre Work</a>
 		</li>
 	</ul>
 </article>
