fixing a link to a blog post from /nhoh

--- a/nhoh/index.html
+++ b/nhoh/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <h1>The Named Houses of Harrisonburg</h1>
-  <p>click on a pin to see a house's info<br><a href="mailto:totallyuneekemail@gmail.com?subject=submit house to named houses of harrisonburg&body=In this email, please include the house's name and address.">add a house</a> &bull; <a href="/named-houses-harrisonburg.html">creating this site</a></p>
+  <p>click on a pin to see a house's info<br><a href="mailto:totallyuneekemail@gmail.com?subject=submit house to named houses of harrisonburg&body=In this email, please include the house's name and address.">add a house</a> &bull; <a href="/2019/named-houses-harrisonburg">creating this site</a></p>
 	<div id="intbox">
 		<div id="infobox"><div id="infocontent">click on a pin to view a house's info</div></div>
 		<div id="mapid"></div>
