--- a/articles.html
+++ b/articles.html
@@ -29,7 +29,10 @@
 	<h2>2020</h2>
 	<ul>
 		<li>
-			(will populate soon)
+			<a href="/2020/code-highlighting-vim">Simple HTML code highlighting workflow with vim</a>
+		</li>
+		<li>
+			<a href="/2020/mapping-education-afghanistan">Mapping Education Development Projects in Afghanistan</a>
 		</li>
 	</ul>
 	<h2>2019</h2>
