adding a couple of links

--- a/links.html
+++ b/links.html
@@ -85,6 +85,7 @@
 	<li><a href="https://www.si.edu/openaccess">Smithsonian Open Access</a> - digitized works from across the Smithsonians</li>
 	<li><a href="https://www.metmuseum.org/art/collection/">The Met Collection</a> - digitized works from the Met, including 406k+ in public domain</li>
 	<li><a href="https://digitalcollections.nypl.org/">NYPL Digital Collections</a> - digitized items from The New York Public Library</li>
+	<li><a href="https://gez.la/">Gez.la</a> - a directory of virtual tours</li>
 </ul>
 <h3>music 🎵 / web radio 📻</h3>
 <ul>
@@ -109,6 +110,7 @@
 	<li><a href="https://simone.computer">Simone's Computer</a> - in the style of Windows 95, with a fab linkroll!</li>
 	<li><a href="https://matthewrayfield.com/">Matthew Rayfield World</a></li>
 	<li><a href="https://kalilhaddad.com/">Kalil Haddad</a> - site for filmmaker Kalil Haddad with navigation using icons from Mac OS</li>
+	<li><a href="https://lingdong.works/">🔓 Lingdong's Project Links</a> - advanced programming projects, many of which create art and visualizations</li>
 </ul>
 <h3>icons / stock images</h3>
 <ul>
