Adding non-https warnings to links in the mapping education post

--- a/links.html
+++ b/links.html
@@ -85,6 +85,7 @@
 	<li><a href="https://www.si.edu/openaccess">Smithsonian Open Access</a> - digitized works from across the Smithsonians</li>
 	<li><a href="https://www.metmuseum.org/art/collection/">The Met Collection</a> - digitized works from the Met, including 406k+ in public domain</li>
 	<li><a href="https://digitalcollections.nypl.org/">NYPL Digital Collections</a> - digitized items from The New York Public Library</li>
+	<li><a href="https://artvee.com">Artvee</a> - public domain art from a variety of sources</li>
 	<li><a href="https://gez.la/">Gez.la</a> - a directory of virtual tours</li>
 </ul>
 <h3>music 🎵 / web radio 📻</h3>
