adding link to links.html

--- a/links.html
+++ b/links.html
@@ -134,6 +134,7 @@
 	<li><a href="https://wordways.us">wordways</a> - my friend Aidan's poetry</li>
 	<li><a href="https://jacobhall.net/secret_message.html">Jacob and Leah's Secret Message Page</a> - still the raddest page on the internet. thanks Uncle John! archived with permission from johnlorenz.net</li>
 	<li><a href="https://www.windows93.net/">WINDOWS93</a> - idk man, see for yourself</li>
+	<li><a href="https://buntspechtband.at/">buntspechtband.at</a> - unique website for an Austrian band</li>
 	<li><a href="https://toki.increpare.com/">lipu pi jan Inkepa</a> - projects about Toki Pona by jan Inkepa</li>
 	<li><a href="https://stanford.edu/~vbauer/">Vincent Bauer</a> - a really slick personal site compiled in R, with lots of great resources for using R, particularly in regard to political science research</li>
 	<li><a href="https://restorativland.org/">restorativland</a> - a project to revive lost "web ruins"</li>
