correcting titles of webdev.html

--- a/webdev.html
+++ b/webdev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>about</title>
+		<title>Website Development</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
@@ -27,7 +27,7 @@
         </div>
 	<article>
 
-	<h1>about this site</h1>
+	<h1>Website Development</h1>
 
 <p>
 Hi, my name is Jacob Hall, and sometimes I develop websites!
