added SVG Repo to links.html

--- a/links.html
+++ b/links.html
@@ -115,6 +115,7 @@
 </ul>
 <h3>icons / stock images</h3>
 <ul>
+	<li><a href="https://www.svgrepo.com">SVG Repo</a> - lots of great permissively-licensed SVG vectors and icons</li>
 	<li><a href="https://iconmonstr.com/">iconmonstr</a> - free, high-quality icons with permissive license, note you must disable adblocker to download</li>
 	<li><a href="https://github.com/tabler/tabler-icons">tabler-icons</a> (github) - over 450 MIT licensed SVG icons</li>
 	<li><a href="https://www.flaticon.com">flaticon</a> - big selection of SVGs, free with attribution</li>
