fixing link to Ben's music recs in links.html

--- a/links.html
+++ b/links.html
@@ -90,7 +90,7 @@
 </ul>
 <h3>music 🎵 / web radio 📻</h3>
 <ul>
-	<li><a href="http://bwagley.com/music.html">Ben's music recs</a> - my friend Ben's music recs</li>
+	<li><a href="https://bwagley.com/music.html">Ben's music recs</a> - my friend Ben's music recs</li>
 	<li><a href="https://marijnflorence.neocities.org/music/">Music i like</a> - HAVE I MENTIONED HOW IN LOVE I AM WITH MARIJN'S WEBSITE</li>
 	<li><a href="https://morningtunes.music.blog/blog-feed/">Morning Tunes</a> - someone logging the songs stuck in their head when they wake up</li>
 	<li><a href="https://wcwm.wm.edu/">WCWM 90.9</a> - William & Mary Radio</li>
