small fixes to links.html

--- a/links.html
+++ b/links.html
@@ -106,12 +106,12 @@
 <ul>
 	<li><a href="bwagley.com">Ben Wagley</a> - my friend Ben</li>
 	<li><a href="https://www.kickscondor.com/">Kicks Condor</a> - "FORMER COMPUTER EXPERT" Kicks Condor shares so many great things on this eclectic site</li>
-	<li><a href="http://jayweingarten.site/">🔓 Jay's New Site</a> - Jay Weingarten</li>
+	<!--	<li><a href="http://jayweingarten.site/">🔓 Jay's New Site</a> - Jay Weingarten</li> -->
 	<li><a href="https://billwurtz.com/">billwurtz</a> - Bill Wurtz, the guy who made <a href="https://www.youtube.com/watch?v=Mh5LY4Mz15o">history of japan</a> and <a href="https://www.youtube.com/watch?v=xuCn8ux2gbs">history of the entire world, i guess</a></li>
 	<li><a href="https://simone.computer">Simone's Computer</a> - in the style of Windows 95, with a fab linkroll!</li>
 	<li><a href="https://matthewrayfield.com/">Matthew Rayfield World</a></li>
 	<li><a href="https://kalilhaddad.com/">Kalil Haddad</a> - site for filmmaker Kalil Haddad with navigation using icons from Mac OS</li>
-	<li><a href="https://lingdong.works/">🔓 Lingdong's Project Links</a> - advanced programming projects, many of which create art and visualizations</li>
+	<li><a href="https://lingdong.works/">Lingdong's Project Links</a> - advanced programming projects, many of which create art and visualizations</li>
 </ul>
 <h3>icons / stock images</h3>
 <ul>
