removing ubu.com from links.html: site not live anymore

--- a/links.html
+++ b/links.html
@@ -50,7 +50,7 @@
 	<li><a href="https://publicarchive.studio/">Public Archive</a> - "A space dedicated to preserving public agencies use of graphic design throughout the 20th century."</li>
 	<li><a href="https://artres.xyz/">ART-RES</a> - curated art resources and materials</li>
 	<li><a href="https://www.peepshow.org.uk/">PEEPSHOW</a> - British art studio
-	<li><a href="http://www.ubu.com/">🔓 UbuWeb</a> - "a large web-based educational resource for avant-garde material" &#8213;<a href="https://en.wikipedia.org/wiki/UbuWeb">wikipedia.org</a></li>
+		<!-- <li><a href="http://www.ubu.com/">🔓 UbuWeb</a> - "a large web-based educational resource for avant-garde material" &#8213;<a href="https://en.wikipedia.org/wiki/UbuWeb">wikipedia.org</a></li> -->
 </ul>
 <h3>blogs ✏️</h3>
 <ul>
