adding a couple of artists to about.html

--- a/about.html
+++ b/about.html
@@ -95,6 +95,7 @@ here's an incomplete list of artists i like:
 	<li>Death Grips</li>
 	<li>Die Antwoord</li>
 	<li>Fatboy Slim</li>
+	<li>フィッシュマンズ (Fishmans)</li>
 	<li>FKA Twigs</li>
 	<li>The Flaming Lips</li>
 	<li>Gorillaz</li>
@@ -105,6 +106,7 @@ here's an incomplete list of artists i like:
 	<li>JPEGMAFIA</li>
 	<li>Kendrick Lamar</li>
 	<li>Mac Demarco</li>
+	<li>MF DOOM</li>
 	<li>Only Real</li>
 	<li>Peter Cat Recording Co.</li>
 	<li>Princess Nokia</li>
