added kylemcdonald.net to links.html

--- a/links.html
+++ b/links.html
@@ -110,6 +110,7 @@
 	<li><a href="https://billwurtz.com/">billwurtz</a> - Bill Wurtz, the guy who made <a href="https://www.youtube.com/watch?v=Mh5LY4Mz15o">history of japan</a> and <a href="https://www.youtube.com/watch?v=xuCn8ux2gbs">history of the entire world, i guess</a></li>
 	<li><a href="https://simone.computer">Simone's Computer</a> - in the style of Windows 95, with a fab linkroll!</li>
 	<li><a href="https://matthewrayfield.com/">Matthew Rayfield World</a></li>
+	<li><a href="https://kylemcdonald.net/">Kyle McDonald</a> - art projects involving humans, technology, and the natural world</li>
 	<li><a href="https://kalilhaddad.com/">Kalil Haddad</a> - site for filmmaker Kalil Haddad with navigation using icons from Mac OS</li>
 	<li><a href="https://lingdong.works/">Lingdong's Project Links</a> - advanced programming projects, many of which create art and visualizations</li>
 </ul>
