fixed link to bwagley.com

--- a/links.html
+++ b/links.html
@@ -104,7 +104,7 @@
 </ul>
 <h3>personal sites</h3>
 <ul>
-	<li><a href="bwagley.com">Ben Wagley</a> - my friend Ben</li>
+	<li><a href="https://bwagley.com">Ben Wagley</a> - my friend Ben</li>
 	<li><a href="https://www.kickscondor.com/">Kicks Condor</a> - "FORMER COMPUTER EXPERT" Kicks Condor shares so many great things on this eclectic site</li>
 	<!--	<li><a href="http://jayweingarten.site/">🔓 Jay's New Site</a> - Jay Weingarten</li> -->
 	<li><a href="https://billwurtz.com/">billwurtz</a> - Bill Wurtz, the guy who made <a href="https://www.youtube.com/watch?v=Mh5LY4Mz15o">history of japan</a> and <a href="https://www.youtube.com/watch?v=xuCn8ux2gbs">history of the entire world, i guess</a></li>
