adding "quick links" to links.html

--- a/links.html
+++ b/links.html
@@ -29,6 +29,11 @@
 <p>
 	I have this page set as my browser's home page, and use it to remember sites that I like.
 </p>
+<h3>quick links</h3>
+<ul>
+	<li><a href="https://blackboard.wm.edu/">W&amp;M Blackboard</a></li>
+	<li><a href="https://prod.banner.wm.edu/ssb8/twbkwbis.P_WWWLogin">W&amp;M Banner</a></li>
+</ul>
 <h3>directories</h3>
 <ul>
 	<li><a href="https://curlie.org/">Curlie</a> - a really comprehensive directory</li>
