edits to about page

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
 	<ul>
 		<li>write all code by hand</li>
 		<li>write content directly onto the site: unfinished work is public</li>
-		<li>no posted/edited dates for articles, instead update them whenever</li>
+		<li>articles are living documents, update them whenever</li>
 		<li>decrease file sizes where possible, and include CSS and SVG code in the main html</li>
 		<li>do not load resources from third-parties</li>
-		<li>avoid using scripts</li>
+		<li>avoid using client-side scripts</li>
 	</ul>
 <p>
 	i hope for this website to represent how i feel about the internet and what it should look like<br>
@@ -67,11 +67,11 @@
 		<li>create a page dedicated to music videos i love</li>
 		<li>add my music library (funkwhale instance on a subdomain?)</li>
 		<li>add comments for posts (maybe just email-in?)</li>
-		<li>federate the blog part with ActivityPub (this would be the comment system)</li>
+		<li>federate the blog part with ActivityPub (this could be the comment system)</li>
 	</ul>
 	<h1>about me</h1>
 	<ul>
-		<li>i use the pronouns he/him/his</li>
+		<li>i usually use the pronouns he/him but other pronouns are fine too</li>
 		<li>i was born in december 1999</li>
 		<li>i'm usually barefoot</li>
 		<li>i'm a notary public for the commonwealth of virginia</li>
