--- a/nhoh/index.html
+++ b/nhoh/index.html
@@ -9,6 +9,7 @@
   </head>
 <body>
   <h1>The Named Houses of Harrisonburg</h1>
+<p><i>This page has been archived. Interactive elements may be disabled</i></p>
   <p>click on a pin to see a house's info<br><a href="mailto:totallyuneekemail@gmail.com?subject=submit house to named houses of harrisonburg&body=In this email, please include the house's name and address.">add a house</a> &bull; <a href="/2019/named-houses-harrisonburg">creating this site</a></p>
 	<div id="intbox">
 		<div id="infobox"><div id="infocontent">click on a pin to view a house's info</div></div>
