adding #contentbox to article pages so that if there are multiple entries they stack vertically

--- a/beforeentry.html
+++ b/beforeentry.html
@@ -247,6 +247,7 @@ u:-webkit-scrollbar {
 			}
 		}
 		#contentbox {
+			display: inline-block;
 			width: 100%;
 			max-width: 50em;
 			min-width: 10%
@@ -294,3 +295,5 @@ u:-webkit-scrollbar {
                         <h5>⬅️ Jacob Hall's weblog</h5>
                 </a>
         </div>
+
+<div id="contentbox">
