--- a/links.html
+++ b/links.html
@@ -27,19 +27,16 @@
 <!-- When I transferred this article from the home page it ended up with just <h1> and <h3> tags. I should probably fix that -->
 <h1>🔗 running list of my favorite links</h1>
 <p>
-	I have this page set as my browser's home page, and use it to remember sites that I like.
+	I have this page set as my browser's home page, and use it to remember sites that I like. Feel free to <a href="mailto:jacobhall.net">email me suggestions!</a>
 </p>
-<h3>quick links</h3>
-<ul>
-	<li><a href="https://blackboard.wm.edu/">W&amp;M Blackboard</a></li>
-	<li><a href="https://prod.banner.wm.edu/ssb8/twbkwbis.P_WWWLogin">W&amp;M Banner</a></li>
-</ul>
 <h3>directories</h3>
 <ul>
 	<li><a href="https://curlie.org/">Curlie</a> - a really comprehensive directory</li>
 	<li><a href="https://href.cool/">href.cool</a> - directory of all sorts of good things</li>
 	<li><a href="http://www.dodiy.org/">🔓 DoDIY</a> - catalog of spaces that host DIY shows</li>
 	<li><a href="https://marijnflorence.neocities.org/linkroll/">Marijn's Linkroll</a> - I swear I found this page after I created this one. Apologies in advance to <a href="https://marijnflorence.neocities.org/">Marijn</a> for stealing all their ideas!</li>
+	<li><a href="https://terra.finzdani.net/">Terra</a> - "cool sites, straight from earth"</li>
+	<li><a href="https://www.electrictrash.com/">Electric Trash</a> - "dedicated to the electronic flotsam and jetsam of the open web"</li>
 	<li><a href="https://indieseek.xyz/links/">indieseek.xyz</a> - directory of indie websites</li>
 	<li><a href="https://pointers.dailywebthing.com/">dailywebthing daily pointers</a> - this whole site is worth poking around</li>
 	<li><a href="https://www.wikiart.org/">WikiArt</a> - a visual art encyclopedia</li>
@@ -57,14 +54,14 @@
 	<li><a href="https://www.peepshow.org.uk/">PEEPSHOW</a> - British art studio
 		<!-- <li><a href="http://www.ubu.com/">🔓 UbuWeb</a> - "a large web-based educational resource for avant-garde material" &#8213;<a href="https://en.wikipedia.org/wiki/UbuWeb">wikipedia.org</a></li> -->
 </ul>
-<h3>blogs ✏️</h3>
+<h3>blogs / mags ✏️</h3>
 <ul>
 	<li><a href="https://solar.lowtechmagazine.com/">LOW←TECH MAGAZINE</a> - doubts on progress and technology (solar-powered website! ☀️)</li>
 	<li><a href="https://atlasofplaces.com">Atlas of Places</a> - a "public educational collection" about places</li>
 	<li><a href="https://earlyretirementextreme.com/">Early Retirement Extreme</a> - financial advice blog</li>
 	<li><a href="https://sites.google.com/site/livingwithoutmoney/">Living Without Money</a> - writings of a  guy who decided to go "moneyless"</li>
 </ul>
-<h3>films</h3>
+<h3>films 🎥</h3>
 <ul>
 	<li><a href="https://www.shortoftheweek.com/">Short of the Week</a> - fantastic short films, every week</li>
 	<li><a href="https://vimeo.com/channels/staffpicks">Vimeo Staff Picks</a> - great films curated by Vimeo</li>
@@ -72,13 +69,20 @@
 	<li><a href="https://www.lawebdecanada.com/">CANADA</a> - probably my favorite film production studio. everything they make is breathtaking</li>
 
 </ul>
-<h3>forums</h3>
+<h3>forums / communities</h3>
 <ul>
+	<li><a href="https://indieweb.org/">IndieWeb</a> - "a community of individual personal websites, connected by simple standards, based on the principles of owning your domain, using it as your primary identity, to publish on your own site, and own your data"</li>
 	<li><a href="https://news.ycombinator.com">Hacker News</a> - one of my most reliable sources of interesting reads</li>
-	<li><a href="https://www.reddit.com/r/ultralight">/r/ultralight</a> - amazing community of ultralight backpackers</li>
+	<li><a href="https://www.reddit.com/r/ultralight">/r/ultralight</a> - friendly community of ultralight backpackers</li>
 	<li><a href="https://www.reddit.com/r/selfhosted">/r/selfhosted</a> - community of self-hosters</li>
 </ul>
-<h3>games</h3>
+<h3>FUN</h3>
+<ul>
+	<li><a href="https://gifparty.dance/">GIF Dance Party</a></li>
+	<li><a href="https://www.cameronsworld.net/">Cameron's World</a></li>
+	<li><a href="https://www.windows93.net/">WINDOWS93</a> - idk man, see for yourself</li>
+</ul>
+<h3>gaming 🕹️</h3>
 <ul>
 	<li><a href="https://candybox2.github.io/">Candy Box 2</a> - if you haven't played this before, you're in for a treat!</li>
 	<li><a href="https://emulation.gametechwiki.com">the emulation general wiki</a> - a great resource for keeping up with video game emulation</li>
@@ -102,6 +106,7 @@
 	<li><a href="https://somafm.com/">soma fm</a> - listener-supported radio channels of all sorts</li>
 	<li><a href="https://theconditionalorchestra.com">The Conditional Orchestra</a> - music generated based on the current weather conditions in your area</li>
 	<li><a href="https://generative.fm">Generative.fm</a> - ambient generative music by Alex Bainter</li>
+	<li><a href="https://soundsofthepub.com/">Sounds of the Pub</a> - "a bespoke virtual sound generator project"</li>
 </ul>
 <h3>photography 📷</h3>
 <ul>
@@ -110,7 +115,12 @@
 <h3>personal sites</h3>
 <ul>
 	<li><a href="https://bwagley.com">Ben Wagley</a> - my friend Ben</li>
+	<li><a href="https://www.maxwelljoslyn.com/index">Maxwell Joslyn</a> - genuine drongo, poet, game designer, and fellow IndieWeb conspirator</li>
+	<li><a href="https://jacky.wtf/">Jacky Alcine</a> - i have an internet crush on this guy, if that's a thing</li>
+	<li><a href="https://lynnandtonic.com/">Lynn Fisher</a> - multi-talented artist, check out her webdev projects in /web/</li>
+	<li><a href="https://aaronparecki.com/">Aaron Parecki</a> a legend in the IndieWeb!</li>
 	<li><a href="https://www.kickscondor.com/">Kicks Condor</a> - "FORMER COMPUTER EXPERT" Kicks Condor shares so many great things on this eclectic site</li>
+	<li><a href="https://stanford.edu/~vbauer/">Vincent Bauer</a> - a really slick personal site compiled in R, with lots of great resources for using R, particularly in regard to political science research</li>
 	<!--	<li><a href="http://jayweingarten.site/">🔓 Jay's New Site</a> - Jay Weingarten</li> -->
 	<li><a href="https://billwurtz.com/">billwurtz</a> - Bill Wurtz, the guy who made <a href="https://www.youtube.com/watch?v=Mh5LY4Mz15o">history of japan</a> and <a href="https://www.youtube.com/watch?v=xuCn8ux2gbs">history of the entire world, i guess</a></li>
 	<li><a href="https://simone.computer">Simone's Computer</a> - in the style of Windows 95, with a fab linkroll!</li>
@@ -118,6 +128,13 @@
 	<li><a href="https://kylemcdonald.net/">Kyle McDonald</a> - art projects involving humans, technology, and the natural world</li>
 	<li><a href="https://kalilhaddad.com/">Kalil Haddad</a> - site for filmmaker Kalil Haddad with navigation using icons from Mac OS</li>
 	<li><a href="https://lingdong.works/">Lingdong's Project Links</a> - advanced programming projects, many of which create art and visualizations</li>
+</ul>
+<h3>webrings 💍</h3>
+<ul>
+	<li><a href="https://xn--sr8hvo.ws/">An IndieWeb Webring</a> (<a href="https://xn--sr8hvo.ws/directory">directory</a>) - i'm in this one!
+	<li><a href="https://emreed.net/LowTech_Directory.html">LOW TECH WEBRING DIRECTORY</a></li>
+	<li><a href="https://hotlinewebring.club/">Hotline Webring</a></li>
+	<li><a href="https://geekring.net/">geekring</a></li>
 </ul>
 <h3>icons / stock images</h3>
 <ul>
@@ -140,10 +157,8 @@
 <ul>
 	<li><a href="https://wordways.us">wordways</a> - my friend Aidan's poetry</li>
 	<li><a href="https://jacobhall.net/secret_message.html">Jacob and Leah's Secret Message Page</a> - still the raddest page on the internet. thanks Uncle John! archived with permission from johnlorenz.net</li>
-	<li><a href="https://www.windows93.net/">WINDOWS93</a> - idk man, see for yourself</li>
 	<li><a href="https://buntspechtband.at/">buntspechtband.at</a> - unique website for an Austrian band</li>
 	<li><a href="https://toki.increpare.com/">lipu pi jan Inkepa</a> - projects about Toki Pona by jan Inkepa</li>
-	<li><a href="https://stanford.edu/~vbauer/">Vincent Bauer</a> - a really slick personal site compiled in R, with lots of great resources for using R, particularly in regard to political science research</li>
 	<li><a href="https://restorativland.org/">restorativland</a> - a project to revive lost "web ruins"</li>
 	<li><a href="https://www.tasteatlas.com/">World Food Atlas</a></li>
 	<li><a href="https://www.plugsocketmuseum.nl/Overview.html">Digital Museum of Plugs and Sockets</a></li>
