trying to automatically populate the recent articles part of my homepage

--- a/links.html
+++ b/links.html
@@ -81,6 +81,7 @@
 	<li><a href="https://gifparty.dance/">GIF Dance Party</a></li>
 	<li><a href="https://www.cameronsworld.net/">Cameron's World</a></li>
 	<li><a href="https://www.windows93.net/">WINDOWS93</a> - idk man, see for yourself</li>
+	<li><a href="http://alienmelon.com/">ALIENMELON</a> - "net-art, experimental games, and strange desktop apps..."</li>
 </ul>
 <h3>gaming 🕹️</h3>
 <ul>
