updating quartz' test page

--- a/quartz.html
+++ b/quartz.html
@@ -8,26 +8,56 @@
 	<style>
 		body {
 			text-align: center;
+			background-image: url("quartz/bgpastelstreaks.jpg");
 			background-color: brown;
 		}
-		#notepad {
-			text-align: left;
-			background-color: white;
+		#contentbox {
 			display: inline-block;
-			padding: 1in;
-			width: 6.5in;
-			height: 9in;
+			width: 60em;
+			max-width: 100%;
+			min-width: 6.5in;
+		}
+		.section {
+			display: inline-block;
+			background-color: white;
+			margin: 2em;
+			padding: 2em;
+			width: calc(100%-2em);
+		}
+		.alignleft {
+			text-align: left;
+		}
+		.section h2 {
+			background-color: black;
+			color: #00ff00;
 		}
 	</style>
 </head>
 <body>
-	<div id="notepad">
+	<div id="contentbox">
+	<div class="section">
+		<h1>Quartz Drucker Dot Com</h1>
+
+	</div>
+	<div class="section alignleft">
+		<h2>To another page</h2>
+		<h2>A writing I want to link</h2>
+		<h2>About me</h2>
+		<p>
 		&Tab;In your text you mentioned your site could look like an old word processor, and I really liked that idea.
 		I'm thinking there could be a fun sort of 2000s-style menubar above this "page," with navigation to various pages on your site.
-		The background could be a fun texture or pattern of some sort? Probably not this brown.<br><br>
-		This is where you could put content, like something you wrote<br><br>
-		The vibe could be like an old word processor<br><br>
-		&Tab;One interesting challenge would be how we'd format longer documents, like would this page be endless, or would it break every 11 inches? Lots to consider</p>
+		The background could be a fun texture or pattern of some sort? Probably not this brown.
+		</p>
+		<p>
+		This is where you could put content, like something you wrote
+		</p>
+		<p>
+		The vibe could be like an old word processor
+		</p>
+		<p>
+		&Tab;One interesting challenge would be how we'd format longer documents, like would this page be endless, or would it break every 11 inches? Lots to consider
+		</p>
+	</div>
 	</div>
 </body>
 </html>
