--- a/links.html
+++ b/links.html
@@ -72,6 +72,7 @@
 <h3>forums / communities</h3>
 <ul>
 	<li><a href="https://indieweb.org/">IndieWeb</a> - "a community of individual personal websites, connected by simple standards, based on the principles of owning your domain, using it as your primary identity, to publish on your own site, and own your data"</li>
+	<li><a href="https://tildeverse.org/">tildeverse</a> - unix servers that have communities of users, many of whom host personal pages</li>
 	<li><a href="https://news.ycombinator.com">Hacker News</a> - one of my most reliable sources of interesting reads</li>
 	<li><a href="https://www.reddit.com/r/ultralight">/r/ultralight</a> - friendly community of ultralight backpackers</li>
 	<li><a href="https://www.reddit.com/r/selfhosted">/r/selfhosted</a> - community of self-hosters</li>
