adding Feather icons to links.html

--- a/links.html
+++ b/links.html
@@ -135,11 +135,13 @@
 <ul>
 	<li><a href="https://xn--sr8hvo.ws/">An IndieWeb Webring</a> (<a href="https://xn--sr8hvo.ws/directory">directory</a>) - i'm in this one!
 	<li><a href="https://emreed.net/LowTech_Directory.html">LOW TECH WEBRING DIRECTORY</a></li>
+	<li><a href="https://weirdwidewebring.net/">Weird Wide Webring</a> - "The web needs a little more weird. These sites are helping."</li>
 	<li><a href="https://hotlinewebring.club/">Hotline Webring</a></li>
 	<li><a href="https://geekring.net/">geekring</a></li>
 </ul>
 <h3>icons / stock images</h3>
 <ul>
+	<li><a href="Feather">Feather</a> - MIT-licensed SVG icons</li>
 	<li><a href="https://www.svgrepo.com">SVG Repo</a> - lots of great permissively-licensed SVG vectors and icons</li>
 	<li><a href="https://iconmonstr.com/">iconmonstr</a> - free, high-quality icons with permissive license, note you must disable adblocker to download</li>
 	<li><a href="https://github.com/tabler/tabler-icons">tabler-icons</a> (github) - over 450 MIT licensed SVG icons</li>
