adding webmention, whostyle links in page headers

--- a/beforearticle.html
+++ b/beforearticle.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
-		<!-- <link rel="stylesheet" type="text/css" href="/articlestyle.css"> -->
+		<link href="/styles/whostyles/whostyle-v1.css" rel="whostyle">
+		<link href="/webmention" rel="webmention">
 </head>
 <body>
         <div id="sidebar">
