adding Gossip's Web to links.html

--- a/links.html
+++ b/links.html
@@ -35,6 +35,7 @@
 	<li><a href="https://href.cool/">href.cool</a> - directory of all sorts of good things</li>
 	<li><a href="http://www.dodiy.org/">🔓 DoDIY</a> - catalog of spaces that host DIY shows</li>
 	<li><a href="https://marijnflorence.neocities.org/linkroll/">Marijn's Linkroll</a> - I swear I found this page after I created this one. Apologies in advance to <a href="https://marijnflorence.neocities.org/">Marijn</a> for stealing all their ideas!</li>
+	<li><a href="https://gossipsweb.net/">Gossip's Web</a> - the directory of handmade webpages</li>
 	<li><a href="https://terra.finzdani.net/">Terra</a> - "cool sites, straight from earth"</li>
 	<li><a href="https://www.electrictrash.com/">Electric Trash</a> - "dedicated to the electronic flotsam and jetsam of the open web"</li>
 	<li><a href="https://indieseek.xyz/links/">indieseek.xyz</a> - directory of indie websites</li>
