updating Marijn's URL in links.html

--- a/links.html
+++ b/links.html
@@ -34,7 +34,7 @@
 	<li><a href="https://curlie.org/">Curlie</a> - a really comprehensive directory</li>
 	<li><a href="https://href.cool/">href.cool</a> - directory of all sorts of good things</li>
 	<li><a href="http://www.dodiy.org/">🔓 DoDIY</a> - catalog of spaces that host DIY shows</li>
-	<li><a href="https://marijnflorence.neocities.org/linkroll/">Marijn's Linkroll</a> - I swear I found this page after I created this one. Apologies in advance to <a href="https://marijnflorence.neocities.org/">Marijn</a> for stealing all their ideas!</li>
+	<li><a href="https://marijn.uk/linkroll/">Marijn's Linkroll</a> - I swear I found this page after I created this one. Apologies in advance to <a href="https://marijn.uk/">Marijn</a> for stealing all their ideas!</li>
 	<li><a href="https://gossipsweb.net/">Gossip's Web</a> - the directory of handmade webpages</li>
 	<li><a href="https://terra.finzdani.net/">Terra</a> - "cool sites, straight from earth"</li>
 	<li><a href="https://www.electrictrash.com/">Electric Trash</a> - "dedicated to the electronic flotsam and jetsam of the open web"</li>
@@ -103,7 +103,7 @@
 <h3>music 🎵 / web radio 📻</h3>
 <ul>
 	<li><a href="https://bwagley.com/music.html">Ben's music recs</a> - my friend Ben's music recs</li>
-	<li><a href="https://marijnflorence.neocities.org/music/">Music i like</a> - HAVE I MENTIONED HOW IN LOVE I AM WITH MARIJN'S WEBSITE</li>
+	<li><a href="https://marijn.uk/music/">Music i like</a> - HAVE I MENTIONED HOW IN LOVE I AM WITH MARIJN'S WEBSITE</li>
 	<li><a href="https://morningtunes.music.blog/blog-feed/">Morning Tunes</a> - someone logging the songs stuck in their head when they wake up</li>
 	<li><a href="https://wcwm.wm.edu/">WCWM 90.9</a> - William & Mary Radio</li>
 	<li><a href="https://somafm.com/">soma fm</a> - listener-supported radio channels of all sorts</li>
