updating about page

--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@
 
 <p>
 	i've designed this website for myself, as a record of things i like and ideas i'm excited about<br>
-	here are some principles i follow in its development:
+	here are some principles i try to follow in its development:
 </p>
 	<ul>
 		<li>write all code by hand</li>
 		<li>write content directly onto the site: unfinished work is public</li>
 		<li>articles are living documents, update them whenever</li>
-		<li>decrease file sizes where possible, and include CSS and SVG code in the main html</li>
-		<li>do not load resources from third-parties</li>
+		<li>decrease file sizes where possible</li>
+		<li>avoid loading resources from third-parties</li>
 		<li>avoid using client-side scripts</li>
 	</ul>
 <p>
@@ -48,30 +48,15 @@
 	(i'd be happy to design your website 😉)
 </p>
 <p>
-	i still haven't made up my mind about how i'll organize this site.<br>
+	i'm still figuring out how i want to organize this site.<br>
 	i'm thinking there will be a separate page for my favorite links, and another for blog-style posts<br>
-	but which page would i make the home page?
-	maybe this one?
-	
 </p>
 <p>
-	i intend to release everything i have on this site into the public domain.<br>
-	for now, i have only done so for the home page.
+	i've developed a roadmap for this website available <a href="https://github.com/jacobwhall/jacobhall.net/milestones">here</a>
 </p>
-<p>
-	here are some ideas i have for the future of this site:
-</p>
-	<ul>
-		<li>self-host once i can</li>
-		<li>make a cute little photo gallery</li>
-		<li>create a page dedicated to music videos i love</li>
-		<li>add my music library (funkwhale instance on a subdomain?)</li>
-		<li>add comments for posts (maybe just email-in?)</li>
-		<li>federate the blog part with ActivityPub (this could be the comment system)</li>
-	</ul>
 	<h1>about me</h1>
 	<ul>
-		<li>i usually use the pronouns he/him but other pronouns are fine too</li>
+		<li>i usually use the pronouns he/him and they/them</li>
 		<li>i was born in december 1999</li>
 		<li>i'm usually barefoot</li>
 		<li>i'm a notary public for the commonwealth of virginia</li>
