adding https://thedigitaldiarist.ca/ to links.html

--- a/links.html
+++ b/links.html
@@ -121,8 +121,9 @@
 	<li><a href="https://www.maxwelljoslyn.com/index">Maxwell Joslyn</a> - genuine drongo, poet, game designer, and fellow IndieWeb conspirator</li>
 	<li><a href="https://jacky.wtf/">Jacky Alcine</a> - i have an internet crush on this guy, if that's a thing</li>
 	<li><a href="https://lynnandtonic.com/">Lynn Fisher</a> - multi-talented artist, check out her webdev projects in /web/</li>
-	<li><a href="https://aaronparecki.com/">Aaron Parecki</a> a legend in the IndieWeb!</li>
+	<li><a href="https://thedigitaldiarist.ca/">the digital diarist</a> - alicia's digital garden</li>
 	<li><a href="https://www.kickscondor.com/">Kicks Condor</a> - "FORMER COMPUTER EXPERT" Kicks Condor shares so many great things on this eclectic site</li>
+	<li><a href="https://aaronparecki.com/">Aaron Parecki</a> a legend in the IndieWeb!</li>
 	<li><a href="https://stanford.edu/~vbauer/">Vincent Bauer</a> - a really slick personal site compiled in R, with lots of great resources for using R, particularly in regard to political science research</li>
 	<!--	<li><a href="http://jayweingarten.site/">🔓 Jay's New Site</a> - Jay Weingarten</li> -->
 	<li><a href="https://billwurtz.com/">billwurtz</a> - Bill Wurtz, the guy who made <a href="https://www.youtube.com/watch?v=Mh5LY4Mz15o">history of japan</a> and <a href="https://www.youtube.com/watch?v=xuCn8ux2gbs">history of the entire world, i guess</a></li>
