adding The Yesterweb Ring to links.html

--- a/links.html
+++ b/links.html
@@ -43,6 +43,7 @@
 	<li><a href="https://www.wikiart.org/">WikiArt</a> - a visual art encyclopedia</li>
 	<li><a href="https://monoskop.org">Monoskop</a> - "a wiki for the arts, media and humanities."</li>
 	<li><a href="https://districts.neocities.org/">neocities districts</a> - directory of <a href="https://neocities.org/">neocities</a> pages</li>
+	<li><a href="https://yesterwebring.neocities.org/linkdirectory/">The Yesterweb Link Directory</a> - website creation, digital art, and other gems</li>
 	<li><a href="https://allthearchitects.com">All the Architects</a> - directory of architects' websites</li>
 </ul>
 <h3>art 🖌️</h3>
@@ -140,6 +141,7 @@
 	<li><a href="https://weirdwidewebring.net/">Weird Wide Webring</a> - "The web needs a little more weird. These sites are helping."</li>
 	<li><a href="https://hotlinewebring.club/">Hotline Webring</a></li>
 	<li><a href="https://geekring.net/">geekring</a></li>
+	<li><a href="https://yesterwebring.neocities.org/">The Yesterweb Ring</a> (<a href="https://yesterwebring.neocities.org/members.html">directory</a>)- "for anyone who is tired of how boring and same-y the internet is today"</li>
 </ul>
 <h3>icons / stock images</h3>
 <ul>
