all posts use a whostyle, whether it's mine or someone else's

--- a/beforeentry.html
+++ b/beforeentry.html
@@ -10,6 +10,7 @@
 		<link href="/webmention" rel="webmention">
 		<link href="/styles/universal.css" rel="stylesheet">
 		<link href="/styles/article.css" rel="stylesheet">
+		<link href="/styles/whostyles/whostyle-v1.css" rel="stylesheet">
 </head>
 <body>
         <div id="sidebar">
@@ -17,14 +18,14 @@
                 <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                         <div class="flipper">
                                 <div class="front">
-                                        <img class="profilepic" id="backprofilepic" src="/profile.jpg" alt="sexy mirror selfie"/>
+                                        <img class="profilepic u-photo" id="backprofilepic" src="/profile.jpg" alt="sexy mirror selfie"/>
                                 </div>
                                 <div class="back">
                                         <span>🏠</span>
                                 </div>
                         </div>
                 </div>
-                        <h5>⬅️ Jacob Hall's weblog</h5>
+			<h5>⬅️ <span class="p-name">Jacob Hall</span>'s weblog</h5>
                 </a>
         </div>
 
