--- a/links.html
+++ b/links.html
@@ -145,7 +145,7 @@
 </ul>
 <h3>icons / stock images</h3>
 <ul>
-	<li><a href="Feather">Feather</a> - MIT-licensed SVG icons</li>
+	<li><a href="https://feathericons.com/">Feather</a> - MIT-licensed SVG icons</li>
 	<li><a href="https://www.svgrepo.com">SVG Repo</a> - lots of great permissively-licensed SVG vectors and icons</li>
 	<li><a href="https://iconmonstr.com/">iconmonstr</a> - free, high-quality icons with permissive license, note you must disable adblocker to download</li>
 	<li><a href="https://github.com/tabler/tabler-icons">tabler-icons</a> (github) - over 450 MIT licensed SVG icons</li>
