database querying improvements, general cleanup
- statements now get prepared, with optional arguments
- posts now have human-readable date values, courtesy of an
  updated PostgreSQL view
- articles now have titles
- cleanup

--- a/article.html
+++ b/article.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<title>links</title>
+		<title>@title </title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#FFFFFF"/>
-		<link rel="stylesheet" type="text/css" href="articlestyle.css">
+		<link href="/styles/universal.css" rel="stylesheet">
+		<link href="/styles/article.css" rel="stylesheet">
+		<link href="/styles/whostyles/whostyle-v1.css" rel="stylesheet">
+		<link href="/styles/whostyles/whostyle-v1.css" rel="whostyle">
 </head>
 <body>
         <div id="sidebar">
