--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</div>
 </div>
 <div id="contentbox">
-	@posts
+	@(posts 5 #:types (list 1 2 3 7 8 9 10))
 <h2><a href="/kind">view more posts ➡️</a></h2>
 <div id="subsequentbox">
 	<div class="list">
